Web tier lombok (#46)
* lombok added to models
* services & endpoints for Products aligned
* service & endpoint for MealTypes aligned
* services & endpoints for Dishes aligned
* Builder is used
* @Jacksonized is used